--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "demo": "npm run dist && http-server demo",
     "dist": "npm run dist-dev && npm run dist-prod",
     "dist-dev": "browserify -s Kinto -x fake-indexeddb -x localStorage -d -e src/index.js -o dist/kinto.dev.js && cp dist/kinto.dev.js demo/",
+    "dist-fx": "browserify -s loadKinto -x fake-indexeddb -x localStorage -d -u src/adapters/IDB.js -u src/adapters/LocalStorage -e src/index-fx.js -o dist/Kinto.jsm",
     "dist-prod": "browserify -s Kinto -x fake-indexeddb -x localStorage -g uglifyify -e src/index.js -o dist/kinto.min.js && cp dist/kinto.min.js demo/",
     "publish-package": "npm run build && npm publish",
     "report-coverage": "npm run test-cover && ./node_modules/coveralls/bin/coveralls.js < ./coverage/lcov.info",
